# ChaseOS

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLI-INSTALL-README.md  CORE_MANIFEST.md  FORKING.md  HERMES.md  KNOWLEDGE-INDEX.md  LOCAL-OSS.md  N8N.md  NEXT-STEPS.md  OPENAI.md  OPENCLAW.md  OPERATOR-BRIEF-INDEX.md  PROJECT_FOUNDATION.md  README.md  ROADMAP.md  RUNTIME-REGISTRY.md  SETUP-INSTRUCTIONS.md  SOUL.md  SOUL.template.md  SYSTEM-STATUS.md  chaseos.py  conftest.py  pyproject.toml
00_HOME/: Dashboard.example.md  Now.example.md  README.md
01_PROJECTS/: README.md
02_KNOWLEDGE/: Knowledge-Index.example.md  README.md
04_SOPS/: Agent-Failure-Ambiguity-SOP.md  Build-Log-SOP.md  Credential-Boundaries-SOP.md  Promotion-Session-SOP.md  Research-Ingest-SOP.md  Untrusted-Input-Handling-SOP.md
05_TEMPLATES/: Adapter-Compliance-Checklist.md  Agent-Activity-Log-Template.md  Agent-Audit-Log-Template.md  Agent-Runtime-Profile-Template.md  Agent-Session-Log-Template.md  Customer-Offer-Canvas.md  Daily-Note-Template.md  Decision-Ledger-Entry-Template.md  Decision-Log-Template.md  Domain-Goal-Profile-Template.md  Domain-Playbook-Template.md  Experiment-Hypothesis-Template.md  Experiment-Template.md  Feature-Filter-Template.md  Generated-Idea-Template.md  Live-Revenue-Evidence-Template.md  Mission-Manifest-Template.md  Mission-Recommendation-Card.md  Mission-Review-Template.md  Mission-State-Ledger-Template.md  Morning-Thesis-Output-Template.md  New-Runtime-Registration-Checklist.md  Operator-Run-Audit-Template.md  Personal-Domain-Node-Template.md  Personal-Map-Node-Template.md  Pivot-Log-Entry-Template.md  Project-OS-Template.md  Real-Client-Scope-Approval-Template.md  Real-Client-Scope-Evidence-Template.md  Session-Prompt-Patterns.md  Site-Profile-Template.md  SiteOps-Approval-Request-Template.md  SiteOps-Gate-Policy-Live-Application-Runbook.md  SiteOps-Run-Audit-Template.md  SiteOps-Skill-Template.md  SiteOps-Workflow-Template.md  Source-Note-Template.md  Startup-Validation-Launch-Report-Template.md  StrikeZone-Daily-Thesis-Discord-Template.md  StrikeZone-Operator-Trade-Plan-Template.md  (+8 more)
06_AGENTS/: .workspace-mode.yaml  AI-Generated-Output-Bridge.md  Acquisition-Normalization-Layer.md  Acquisition-Surface-Map.md  Acquisition-and-Source-Pack-Summary-Context-Application.md  Adapter-Manifest-Standard.md  Adaptive-Runtime-Surface-Layer.md  Adaptive-Workflow-Evolution.md  Agent-Activity-and-Runtime-Activity-Summary-Context-Application.md  Agent-Bus-Backend-Architecture.md  Agent-Bus-Folder-Guide.md  Agent-Bus-Visual-Inspection.md  Agent-Control-Plane.md  Agent-Control-UX-Contract.md  Agent-Identity-Ledger-Surfaces-Standalone-Application.md  Agent-Memory-Architecture.md  Agent-Output-Conventions.md  Agent-Registry.md  Agent-Runtime-Brain-Architecture.md  Agent-Scorecard-Standard.md  Agent-Scorecards-and-Runtime-Quality-Surfaces-Standalone-Application.md  Agent-Security-Model.md  AgentHub-Spec.md  Approval-and-Decision-Trace-Summary-Context-Application.md  Architecture-Workbook-2026-04-07.md  Archon-Runtime-Profile.md  Artifact-Intelligence-Submission-Operator.md  Autonomous-Operator-Runtime.md  Backends-Supported.md  Browser-Autonomy-Policy.md  Browser-CDP-Adapter-Design.md  Browser-CDP-Feature-Readiness.md  Browser-Harness-Adoption-Decision.md  Browser-Harness-Boundaries.md  Browser-Operator-Policy.md  Browser-Operator-Skill-Layer.md  Browser-Operator-Surface-Operational-State.md  Browser-Operator-Surface.md  Browser-Runtime-Completion-Estimate.md  Browser-Runtime-Completion-Status.md  (+490 more)
07_LOGS/: README.md
99_ARCHIVE/: README.md
runtime/: .workspace-mode.yaml  CLI-PROMOTION-NOTES.md  CLI-README.md  COMMANDS-README.md  COMMANDS.md  LIFECYCLE-README.md  README.md  Runtime-Layer-Guide.md  SETUP-README.md  TOP-LEVEL-COMMAND-NOTES.md  chaseos_gate.py  cli.py  discord_bindings.py  local_env.py  setup_cli.py  (+27 more)
(+1878 files in other folders)
